--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
         <div class = "Header">
 
             <p><h3>My Portfolio</h3></p> 
-            <button>Contact</button>
-            <button>Projects</button>
-            <button>Home</button>
+            <p class = "contact">Contact</p>
+            <p class = "projects">Projects</p>
+            <button class = "home">Home</button>
 
         </div>
+        <div class = "line">
 
+        </div>
         <div class = "About">
 
-            <h1>About Me</h1>
-            <img href = "">
+            <h1><u>About Me</u></h1>
             <p>Hey There! This is Samprad (or Sam if you know me well enough ;))</p>
+            <img src = "me.png">
+            
             
         </div>
     </body>
