--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 
     <body>
         <div class = "Header">
-
-            <p><h3>My Portfolio</h3></p> 
-            <p class = "contact">Contact</p>
-            <p class = "projects">Projects</p>
-            <button class = "home">Home</button>
-
+    
+            <p class = "headertext"><h3>My Portfolio</h3></p>
+            <div class = "btn-wrapper"></div> 
+                <p class = "contact">Contact</p>
+                <p class = "projects">Projects</p>
+                <button class = "home">Home</button>
+            </div>
         </div>
         <div class = "line">
 
