--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
         <title>My Portfolio</title>
     </head>
 
@@ -22,7 +25,7 @@
 
             <h1><u>About Me</u></h1>
             <p>Hey There! This is Samprad (or Sam if you know me well enough ;))</p>
-            <img src = "me.png" alt = "A stickman who's supposed to be Sam">
+            <img src = "./me.png" alt = "A stickman who's supposed to be Sam">
             
             
         </div>
