--- a/code/index.html
+++ b/code/index.html
@@ -25,7 +25,7 @@
 
             <h1><u>About Me</u></h1>
             <p>Hey There! This is Samprad (or Sam if you know me well enough ;))</p>
-            <img src = "./me.png" alt = "A stickman who's supposed to be Sam">
+            <img src = "../icons/me.png" alt = "A stickman who's supposed to be Sam">
             
             
         </div>
