--- a/code/contact.html
+++ b/code/contact.html
@@ -13,8 +13,8 @@
     
             <p class = "headertext"><h4>My Portfolio</h4></p>
             <div class = "btn-wrapper"></div> 
-                <p class = "btn-left">Home</p>
-                <p class = "btn-center">Projects</p>
+                <p class = "btn-left"><a href = "./index.html">Home</a></p>
+                <p class = "btn-center"><a href = "./projects.html">Projects</a></p>
                 <button class = "btn-right">Contact</button>
             </div>
         </div>
