--- a/code/projects.html
+++ b/code/projects.html
@@ -13,9 +13,9 @@
     
             <p class = "headertext"><h4>My Portfolio</h4></p>
             <div class = "btn-wrapper"></div> 
-                <p class = "btn-left">Contact</p>
-                <p class = "btn-center">Projects</p>
-                <button class = "btn-right">Home</button>
+                <p class = "btn-left"><a href = "./contact.html">Contact</a></p>
+                <p class = "btn-center"><a href = "./index.html">Home</a></p>
+                <button class = "btn-right">Projects</button>
             </div>
         </div>
         <div class = "line">
