--- a/code/contact.html
+++ b/code/contact.html
@@ -12,10 +12,10 @@
         <div class = "Header">
     
             <p class = "headertext"><h4>My Portfolio</h4></p>
-            <div class = "btn-wrapper"></div> 
+            <div class = "btn-wrapper">
                 <p class = "btn-left"><a href = "./index.html">Home</a></p>
                 <p class = "btn-center"><a href = "./projects.html">Projects</a></p>
-                <button class = "btn-right">Contact</button>
+                <p class = "btn-right">Contact</p>
             </div>
         </div>
         <div class = "line">
