--- a/code/projects.html
+++ b/code/projects.html
@@ -12,10 +12,10 @@
         <div class = "Header">
     
             <p class = "headertext"><h4>My Portfolio</h4></p>
-            <div class = "btn-wrapper"></div> 
+            <div class = "btn-wrapper"> 
                 <p class = "btn-left"><a href = "./contact.html">Contact</a></p>
                 <p class = "btn-center"><a href = "./index.html">Home</a></p>
-                <button class = "btn-right">Projects</button>
+                <p class = "btn-right">Projects</p>
             </div>
         </div>
         <div class = "line">
