--- a/code/contact.html
+++ b/code/contact.html
@@ -25,12 +25,12 @@
 
             <h1><u>Connect with Me</u></h1>
             <ul>
-                <li><img src = "../icons/instagram.png" class = "icons insta">Instagram:<a href = "https://instagram.com/__sam.25_" target = "_blank" class = "link"> instagram.com/__sam.25_</a></li>
-                <li><img src = "../icons/facebook.png" class = "icons fb">Facebook:<a href = "https://facebook.com/samprad25" target = "_blank" class = "link"> facebook.com/samprad25</a></li>
-                <li><img src = "../icons/twitter.png" class = "icons x">Twitter:<a href = "https://x.com/thatDNeGeLguy" target = "_blank" class = "link"> x.com/thatDNeGeLguy</a></li>
-                <li><img src = "../icons/linkedin.png" class = "icons linkedin">LinkedIn:<a href = "https://linkedin.com/in/samprad/" target = "_blank" class = "link"> linkedin.com/in/samprad/</a></li>
-                <li><img src = "../icons/discord.png" class = "icons dc">Discord:<a href = "https://discord.gg/RuaR83U" target = "_blank" class = "link"> discord.gg/RuaR83U</a></li>
-                <li><img src = "../icons/github.png" class = "icons github">Github:<a href = "https://github.com/Sam-2503" target = "_blank" class = "link"> github.com/Sam-2503</a></li>
+                <li><img src = "../icons/instagram.png" class = "icons insta">Instagram:<a href = "https://instagram.com/__sam.25_" target = "_blank" class = "link insta"> instagram.com/__sam.25_</a></li>
+                <li><img src = "../icons/facebook.png" class = "icons fb">Facebook:<a href = "https://facebook.com/samprad25" target = "_blank" class = "link fb"> facebook.com/samprad25</a></li>
+                <li><img src = "../icons/twitter.png" class = "icons x">Twitter:<a href = "https://x.com/thatDNeGeLguy" target = "_blank" class = "link x"> x.com/thatDNeGeLguy</a></li>
+                <li><img src = "../icons/linkedin.png" class = "icons linkedin">LinkedIn:<a href = "https://linkedin.com/in/samprad/" target = "_blank" class = "link linkedin"> linkedin.com/in/samprad/</a></li>
+                <li><img src = "../icons/discord.png" class = "icons dc">Discord:<a href = "https://discord.gg/RuaR83U" target = "_blank" class = "link dc"> discord.gg/RuaR83U</a></li>
+                <li><img src = "../icons/github.png" class = "icons github">Github:<a href = "https://github.com/Sam-2503" target = "_blank" class = "link github"> github.com/Sam-2503</a></li>
             </ul>
             
             
