--- a/code/contact.html
+++ b/code/contact.html
@@ -18,19 +18,39 @@
                 <p class = "btn-right">Contact</p>
             </div>
         </div>
-        <div class = "line">
+        <div class = "line"></div>
 
-        </div>
         <div class = "Content contact">
 
             <h1><u>Connect with Me</u></h1>
+
             <ul>
-                <li><img src = "../icons/instagram.png" class = "icons insta">Instagram:<a href = "https://instagram.com/__sam.25_" target = "_blank" class = "link insta"> instagram.com/__sam.25_</a></li>
-                <li><img src = "../icons/facebook.png" class = "icons fb">Facebook:<a href = "https://facebook.com/samprad25" target = "_blank" class = "link fb"> facebook.com/samprad25</a></li>
-                <li><img src = "../icons/twitter.png" class = "icons x">Twitter:<a href = "https://x.com/thatDNeGeLguy" target = "_blank" class = "link x"> x.com/thatDNeGeLguy</a></li>
-                <li><img src = "../icons/linkedin.png" class = "icons linkedin">LinkedIn:<a href = "https://linkedin.com/in/samprad/" target = "_blank" class = "link linkedin"> linkedin.com/in/samprad/</a></li>
-                <li><img src = "../icons/discord.png" class = "icons dc">Discord:<a href = "https://discord.gg/RuaR83U" target = "_blank" class = "link dc"> discord.gg/RuaR83U</a></li>
-                <li><img src = "../icons/github.png" class = "icons github">Github:<a href = "https://github.com/Sam-2503" target = "_blank" class = "link github"> github.com/Sam-2503</a></li>
+
+                <li class = "social insta">
+                    <img src = "../icons/instagram.png" class = "icons insta">Instagram: 
+                    <a href = "https://instagram.com/__sam.25_" target = "_blank" class = "link insta"> instagram.com/__sam.25_</a>
+                </li>
+                <li class = "social fb">
+                    <img src = "../icons/facebook.png" class = "icons fb">Facebook: 
+                    <a href = "https://facebook.com/samprad25" target = "_blank" class = "link fb"> facebook.com/samprad25</a>
+                </li>
+                <li class = "social x">
+                    <img src = "../icons/twitter.png" class = "icons x">Twitter: 
+                    <a href = "https://x.com/thatDNeGeLguy" target = "_blank" class = "link x"> x.com/thatDNeGeLguy</a>
+                </li>
+                <li class = "social linkedin">
+                    <img src = "../icons/linkedin.png" class = "icons linkedin">LinkedIn: 
+                    <a href = "https://linkedin.com/in/samprad/" target = "_blank" class = "link linkedin"> linkedin.com/in/samprad</a>
+                </li>
+                <li class = "social dc">
+                    <img src = "../icons/discord.png" class = "icons dc">Discord: 
+                    <a href = "https://discord.gg/RuaR83U" target = "_blank" class = "link dc"> discord.gg/RuaR83U</a>
+                </li>
+                <li class = "social github">
+                    <img src = "../icons/github.png" class = "icons github">Github: 
+                    <a href = "https://github.com/Sam-2503" target = "_blank" class = "link github"> github.com/Sam-2503</a>
+                </li>
+
             </ul>
             
             
