--- a/code/contact.html
+++ b/code/contact.html
@@ -11,7 +11,7 @@
     <body>
         <div class = "Header">
     
-            <p class = "headertext"><h4>My Portfolio</h4></p>
+            <p class = "headertext">My Portfolio</p>
             <div class = "btn-wrapper">
                 <p class = "btn-left"><a href = "./index.html">Home</a></p>
                 <p class = "btn-center"><a href = "./projects.html">Projects</a></p>
