--- a/code/index.html
+++ b/code/index.html
@@ -18,9 +18,8 @@
                 <p class = "btn-right">Home</p>
             </div>
         </div>
-        <div class = "line">
-
-        </div>
+        <div class = "line"></div>
+        
         <div class = "Content home">
 
             <h1><u>About Me</u></h1>
