consistent button positions on every page

--- a/code/projects.html
+++ b/code/projects.html
@@ -11,15 +11,15 @@
     <body>
         <div class = "Header">
     
-            <p class = "headertext">My Portfolio</p>
-            <div class = "btn-wrapper"> 
-                <p class = "btn-left"><a href = "./contact.html">Contact</a></p>
-                <p class = "btn-center"><a href = "./index.html">Home</a></p>
-                <p class = "btn-right">Projects</p>
+            <p class = "headertext"><h4>My Portfolio</h4></p>
+            <div class = "btn-wrapper">
+                <p class = "btn-left"><a href = "./index.html">Home</a></p>
+                <p class = "btn-center"><a href = "./contact.html">Contact</a></p>
+                <p class = "btn-current"><a href = "./projects.html">Projects</a></p>
             </div>
         </div>
         <div class = "line"></div>
-        
+
         <div class = "Content projects">
 
             <h1><u>About Me</u></h1>
