class name given to content

--- a/code/index.html
+++ b/code/index.html
@@ -23,7 +23,7 @@
         <div class = "Content home">
             <div>
                 <h1><u>About Me</u></h1>
-                <p> Hey There! This is Samprad (or Sam if you know me well enough ;)) <br>
+                <p class = "about"> Hey There! This is Samprad (or Sam if you know me well enough ;)) <br>
                     I am an 18 year old from India who is curious about a hell lot of stuff like everyone should be <br>
                     This website is a project I started working on in my 2nd semester of Engineering along with learning Front-End Development
                 </p>
