changed class names for readability

--- a/code/index.html
+++ b/code/index.html
@@ -9,7 +9,6 @@
         <meta charset="UTF-8">
         <meta name="google" content="notranslate">
         <meta http-equiv="Content-Language" content="en">
-        <script src = ./script.js></script>
     </head>
 
     <body>
@@ -17,9 +16,9 @@
     
             <p class = "headertext"><h4>My Portfolio</h4></p>
             <div class = "btn-wrapper">
-                <p class = "btn-home">Home</p>
-                <p class = "btn-contact">Contact</p>
-                <p class = "btn-projects">Projects</p>
+                <p class = "btn homeButton">Home</p>
+                <p class = "btn contactButton">Contact</p>
+                <p class = "btn projectsButton">Projects</p>
             </div>
         </nav>
 
@@ -84,4 +83,5 @@
         </div>
 
     </body>
+    <script src = ./script.js></script>
 </html>
