changed order of links in contact

--- a/code/index.html
+++ b/code/index.html
@@ -5,7 +5,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-        <title>My Portfolio-Home</title>
+        <title>Samprad's Portfolio</title>
+        <link rel = "icon" type = "image/x-icon" href = "../icons/ghost.png">
         <meta charset="UTF-8">
         <meta name="google" content="notranslate">
         <meta http-equiv="Content-Language" content="en">
@@ -42,30 +43,35 @@
                 <h1><u>Connect with Me</u></h1>
 
                 <ul>
+                    <li class = "social github">
+                        <img src = "../icons/github.png" class = "icons github">Github: 
+                        <a href = "https://github.com/Sam-2503" target = "_blank" class = "link github"> github.com/Sam-2503</a>
+                    </li>
+                    
+                    <li class = "social linkedin">
+                        <img src = "../icons/linkedin.png" class = "icons linkedin">LinkedIn: 
+                        <a href = "https://linkedin.com/in/samprad/" target = "_blank" class = "link linkedin"> linkedin.com/in/samprad</a>
+                    </li>
 
                     <li class = "social insta">
                         <img src = "../icons/instagram.png" class = "icons insta">Instagram: 
                         <a href = "https://instagram.com/__sam.25_" target = "_blank" class = "link insta"> instagram.com/__sam.25_</a>
                     </li>
+
                     <li class = "social fb">
                         <img src = "../icons/facebook.png" class = "icons fb">Facebook: 
                         <a href = "https://facebook.com/samprad25" target = "_blank" class = "link fb"> facebook.com/samprad25</a>
                     </li>
+
                     <li class = "social x">
                         <img src = "../icons/twitter.png" class = "icons x">Twitter: 
                         <a href = "https://x.com/thatDNeGeLguy" target = "_blank" class = "link x"> x.com/thatDNeGeLguy</a>
                     </li>
-                    <li class = "social linkedin">
-                        <img src = "../icons/linkedin.png" class = "icons linkedin">LinkedIn: 
-                        <a href = "https://linkedin.com/in/samprad/" target = "_blank" class = "link linkedin"> linkedin.com/in/samprad</a>
-                    </li>
+
+
                     <li class = "social dc">
                         <img src = "../icons/discord.png" class = "icons dc">Discord: 
                         <a href = "https://discord.gg/RuaR83U" target = "_blank" class = "link dc"> discord.gg/RuaR83U</a>
-                    </li>
-                    <li class = "social github">
-                        <img src = "../icons/github.png" class = "icons github">Github: 
-                        <a href = "https://github.com/Sam-2503" target = "_blank" class = "link github"> github.com/Sam-2503</a>
                     </li>
 
                 </ul>
