--- a/code/index.html
+++ b/code/index.html
@@ -44,34 +44,34 @@
 
                 <ul>
                     <li class = "social github">
-                        <img src = "../icons/github.png" class = "icons github">Github: 
-                        <a href = "https://github.com/Sam-2503" target = "_blank" class = "link github"> github.com/Sam-2503</a>
+                        <img src = "../icons/github.png" class = "icons github"><strong>Github:</strong> 
+                        <a href = "https://github.com/Sam-2503" target = "_blank" class = "link github">Sam-2503</a>
                     </li>
-                    
+
                     <li class = "social linkedin">
-                        <img src = "../icons/linkedin.png" class = "icons linkedin">LinkedIn: 
-                        <a href = "https://linkedin.com/in/samprad/" target = "_blank" class = "link linkedin"> linkedin.com/in/samprad</a>
+                        <img src = "../icons/linkedin.png" class = "icons linkedin"><strong>LinkedIn</strong>: 
+                        <a href = "https://linkedin.com/in/samprad/" target = "_blank" class = "link linkedin">samprad</a>
                     </li>
 
                     <li class = "social insta">
-                        <img src = "../icons/instagram.png" class = "icons insta">Instagram: 
-                        <a href = "https://instagram.com/__sam.25_" target = "_blank" class = "link insta"> instagram.com/__sam.25_</a>
+                        <img src = "../icons/instagram.png" class = "icons insta"><strong>Instagram</strong>: 
+                        <a href = "https://instagram.com/__sam.25_" target = "_blank" class = "link insta">__sam.25_</a>
                     </li>
 
                     <li class = "social fb">
-                        <img src = "../icons/facebook.png" class = "icons fb">Facebook: 
-                        <a href = "https://facebook.com/samprad25" target = "_blank" class = "link fb"> facebook.com/samprad25</a>
+                        <img src = "../icons/facebook.png" class = "icons fb"><strong>Facebook</strong>: 
+                        <a href = "https://facebook.com/samprad25" target = "_blank" class = "link fb">samprad25</a>
                     </li>
 
                     <li class = "social x">
-                        <img src = "../icons/twitter.png" class = "icons x">Twitter: 
-                        <a href = "https://x.com/thatDNeGeLguy" target = "_blank" class = "link x"> x.com/thatDNeGeLguy</a>
+                        <img src = "../icons/twitter.png" class = "icons x"><strong>Twitter</strong>: 
+                        <a href = "https://x.com/thatDNeGeLguy" target = "_blank" class = "link x">thatDNeGeLguy</a>
                     </li>
 
 
                     <li class = "social dc">
-                        <img src = "../icons/discord.png" class = "icons dc">Discord: 
-                        <a href = "https://discord.gg/RuaR83U" target = "_blank" class = "link dc"> discord.gg/RuaR83U</a>
+                        <img src = "../icons/discord.png" class = "icons dc"><strong>Discord</strong>: 
+                        <a href = "https://discord.gg/RuaR83U" target = "_blank" class = "link dc">Join My Server</a>
                     </li>
 
                 </ul>
