--- a/code/index.html
+++ b/code/index.html
@@ -76,9 +76,15 @@
                 <h1><u>Projects</u></h1>
                 <p>This is a collection of the Projects that I am currently working on or have completed so far</p>
                 <div class = "project-table">
-                  <p>Projects Completed</p>
+                    <div class = "table-completed">
+                        <h4><u>Projects Completed</u></h4>
+                    </div>
 
-                  <p>Currently Working on</p> 
+                    <div class = "divider"></div>
+
+                    <div class = "table-working">
+                        <h4><u>Currently Working on</u></h4>
+                    </div>
                 </div>
             </div>
             
