links added to project cards

--- a/code/index.html
+++ b/code/index.html
@@ -10,6 +10,7 @@
         <meta charset="UTF-8">
         <meta name="google" content="notranslate">
         <meta http-equiv="Content-Language" content="en">
+        <script src = ./script.js></script>
     </head>
 
     <body>
@@ -78,19 +79,29 @@
                 <div class = "project-table">
                     <div class = "table-completed">
                         <h4><u>Projects Completed</u></h4>
+
+                        <div class = "card portfolio">
+                            <h5>My Portfolio</h5>
+                            <a href = "github.com/my-portfolio" target = "_blank"><img src = "../icons/github.png" class = "icons github"></a>
+                        </div>
+
                     </div>
 
                     <div class = "divider"></div>
 
                     <div class = "table-working">
                         <h4><u>Currently Working on</u></h4>
+
+                        <div class = "card clouter">
+                            <h5>Clouter</h5>
+                            <a href = "github.com/clouter" target = "_blank"><img src = "../icons/github.png" class = "icons github"></a>
+                        </div>
+
                     </div>
                 </div>
             </div>
             
-            
         </div>
 
     </body>
-    <script src = ./script.js></script>
 </html>
