removed folder and added the code files directly to branch

--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
                 <ul>
                     <li class = "social github">
                         <img src = "../icons/github.png" class = "icons github"><strong>Github:</strong> 
-                        <a href = "https://github.com/Sam-2503" target = "_blank" class = "link github">Sam-2503</a>
+                        <a href = "https://github.com/Sam-2503" target = "_blank" class = "link github" alt = "github-logo">Sam-2503</a>
                     </li>
 
                     <li class = "social linkedin">
                         <img src = "../icons/linkedin.png" class = "icons linkedin"><strong>LinkedIn</strong>: 
-                        <a href = "https://linkedin.com/in/samprad/" target = "_blank" class = "link linkedin">samprad</a>
+                        <a href = "https://linkedin.com/in/samprad/" target = "_blank" class = "link linkedin" alt = "linkedin logo">samprad</a>
                     </li>
 
                     <li class = "social insta">
                         <img src = "../icons/instagram.png" class = "icons insta"><strong>Instagram</strong>: 
-                        <a href = "https://instagram.com/__sam.25_" target = "_blank" class = "link insta">__sam.25_</a>
+                        <a href = "https://instagram.com/__sam.25_" target = "_blank" class = "link insta" alt = "instagram logo">__sam.25_</a>
                     </li>
 
                     <li class = "social dc">
                         <img src = "../icons/discord.png" class = "icons dc"><strong>Discord</strong>: 
-                        <a href = "https://discord.gg/RuaR83U" target = "_blank" class = "link dc">Join My Server</a>
+                        <a href = "https://discord.gg/RuaR83U" target = "_blank" class = "link dc" alt = "discord logo">Join My Server</a>
                     </li>
 
                 </ul>
@@ -82,7 +82,7 @@
 
                         <div class = "card portfolio">
                             <h5>My Portfolio</h5>
-                            <a href = "github.com/my-portfolio" target = "_blank"><img src = "../icons/github.png" class = "icons github"></a>
+                            <a href = "https://github.com/my-portfolio" target = "_blank"><img src = "../icons/github.png" class = "icons github"></a>
                         </div>
 
                     </div>
@@ -94,7 +94,7 @@
 
                         <div class = "card clouter">
                             <h5>Clouter</h5>
-                            <a href = "github.com/clouter" target = "_blank"><img src = "../icons/github.png" class = "icons github"></a>
+                            <a href = "https://github.com/clouter" target = "_blank"><img src = "../icons/github.png" class = "icons github"></a>
                         </div>
 
                     </div>
