modified project cards

--- a/index.html
+++ b/index.html
@@ -79,13 +79,25 @@
             <div>
                 <h1><u>Projects</u></h1>
                 <p>This is a collection of the Projects that I am currently working on or have completed so far</p>
-                <div class = "project-card">
-                    <img src = "./img/brave_screenshot.png" alt = "Samazon screenshot">
-                   <p>A portfolio site built with HTML, CSS and basic JS for showcasing my front-end development skills and projects</p>
-                   <div class = "project-links">
-                        <a href = "https://github.com/Sam-2503/samazon">Github</a>
-                        <a href = "livesite" target = "_blank">Live Demo</a>
-                   </div>
+                <div class = "cards">
+                    <div class = "project-card samazon">
+                        <strong>Samazon</strong>
+                        <img class = "ss" src = "./img/brave_screenshot.png" alt = "Samazon screenshot">
+                        <p>A portfolio site built for showcasing my front-end development skills and projects</p>
+                        <div class = "project-links">
+                        <a href = "https://github.com/Sam-2503/samazon"><img class = "project-link-icon" src = "./icons/github.png"></a>
+                        <a href = "livesite" target = "_blank"><img class = "project-link-icon" src = "./icons/link.png"></a>
+                        </div>
+                    </div>
+                    <div class = "project-card clouter">
+                        <strong>Clouter</strong>
+                        <img class = "ss" src = "./img/Screenshot 2025-05-20 230723.png" alt = "Clouter screenshot">
+                        <p>A club management site built for college campuses by students of NIT Silchar</p>
+                        <div class = "project-links">
+                            <a href = "https://github.com/Sam-2503/clouter" target = "_blank"><img class = "project-link-icon" src = "./icons/github.png"></a>
+                            <a href = "livesite" target = "_blank"><img class = "project-link-icon" src = "./icons/link.png"></a>
+                        </div>
+                    </div>
                 </div>
             </div>
             
