--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
                 <p>This is a collection of the Projects that I am currently working on or have completed so far</p>
                 <div class = "cards">
                     <div class = "project-card samazon">
-                        <strong>Samazon</strong>
+                        <strong>My Portfolio</strong>
                         <img class = "ss" src = "./img/brave_screenshot.png" alt = "Samazon screenshot">
                         <p>A portfolio site built for showcasing my front-end development skills and projects</p>
                         <div class = "project-links">
-                        <a href = "https://github.com/Sam-2503/samazon"><img class = "project-link-icon" src = "./icons/github.png"></a>
-                        <a href = "livesite" target = "_blank"><img class = "project-link-icon" src = "./icons/link.png"></a>
+                        <a href = "https://github.com/Sam-2503/sam-2503.github.io"><img class = "project-link-icon" src = "./icons/github.png"></a>
+                        <a href = "https://sam-2503.github.io" target = "_blank"><img class = "project-link-icon" src = "./icons/link.png"></a>
                         </div>
                     </div>
                     <div class = "project-card clouter">
