changed code to include new dir of me.png

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
                 </div>
             </div>
 
-            <img src = "../icons/me.png" alt = "A stickman who's supposed to be Sam" class = "samphoto">
-
+            <img src = "./img/me.png" alt = "A stickman who's supposed to be Sam" class = "samphoto">
         </section>
 
         <section class = "Content contact">
