added embed images for links

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         <meta name="google" content="notranslate">
         <meta http-equiv="Content-Language" content="en">
         <script src = ./script.js></script>
+        <meta property = "og:title" content = "Samprad's Portfolio">
+        <meta property = "og:description" content = "Check out my portfolio!">
+        <meta property = "og:image" content = "https://sam-2503.github.io/me.png">
+        <meta property = "og:url" content = "https://sam-2503.github.io">
+        <meta name = "twitter:card" content = "summary_large_image">
     </head>
 
     <body>
