--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
         <title>Samprad's Portfolio</title>
+        <meta name="title" content="Samprad's Portfolio" />
         <link rel = "icon" type = "image/x-icon" href = "../icons/ghost.png">
         <meta name = "description" content = "Samprad's personal portfolio showcasing front-end development skills">
         <meta name = "keywords" content = "Samprad, portfolio, front-end developer, HTML, CSS, JavaScript">
@@ -14,11 +15,19 @@
         <meta name="google" content="notranslate">
         <meta http-equiv="Content-Language" content="en">
         <script src = ./script.js></script>
-        <meta property = "og:title" content = "Samprad's Portfolio">
-        <meta property = "og:description" content = "Check out my portfolio!">
-        <meta property = "og:image" content = "https://sam-2503.github.io/me.png">
-        <meta property = "og:url" content = "https://sam-2503.github.io">
-        <meta name = "twitter:card" content = "summary_large_image">
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://sam-2503.github.io/" />
+        <meta property="og:title" content="Samprad's Portfolio" />
+        <meta property="og:description" content="Check out my portfolio!" />
+        <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content="https://sam-2503.github.io/" />
+        <meta property="twitter:title" content="Samprad's Portfolio" />
+        <meta property="twitter:description" content="Check out my portfolio!" />
+        <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
     </head>
 
     <body>
