fixed embed link-3

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <meta property="og:url" content="https://sam-2503.github.io/" />
         <meta property="og:title" content="Samprad's Portfolio" />
         <meta property="og:description" content="Check out my portfolio!" />
-        <meta property="og:image" content="https://sam-2503.github.io/me.png" />
+        <meta property="og:image" content="https://github.com/Sam-2503/Sam-2503.github.io/blob/d73e0c38299ac70a25ccc17b354fb4e5a2cd06f9/img/me.png" />
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
         <meta property="twitter:url" content="https://sam-2503.github.io/" />
         <meta property="twitter:title" content="Samprad's Portfolio" />
         <meta property="twitter:description" content="Check out my portfolio!" />
-        <meta property="twitter:image" content="https://sam-2503.github.io/me.png" />
+        <meta property="twitter:image" content="https://github.com/Sam-2503/Sam-2503.github.io/blob/d73e0c38299ac70a25ccc17b354fb4e5a2cd06f9/img/me.png" />
     </head>
 
     <body>
