--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                 <h1><u>About Me</u></h1>
                 <div class = "about"> 
                     <p>Hey There! I'm Samprad (or Sam if we're already pals)</p>
-                    <p>I am an 18 year old from India with an insatiable curiousity for tech, design and basically anything that makes the digital world tick.</p>
+                    <p>I am an 18 year old from India with an insatiable curiosity for tech, design and basically anything that makes the digital world tick.</p>
                     <p>I started this portfolio in my 2nd semester to document my journey in Front-End Development and explore how creativity and code collide.</p>
-                    When I'm not breaking my code (and occassionally fixing it), I'm probably obsessing over clean UI, smart user experiences, or crafting side projects that nobody asked for-but hey, they're cool!</p>
+                    When I'm not breaking my code (and occasionally fixing it), I'm probably obsessing over clean UI, smart user experiences, or crafting side projects that nobody asked for-but hey, they're cool!</p>
                 </div>
             </div>
 
@@ -93,9 +93,9 @@
                 <h1><u>Projects</u></h1>
                 <p>This is a collection of the Projects that I am currently working on or have completed so far</p>
                 <div class = "cards">
-                    <div class = "project-card samazon">
+                    <div class = "project-card portfolio">
                         <strong>My Portfolio</strong>
-                        <img class = "ss" src = "./img/brave_screenshot.png" alt = "Samazon screenshot">
+                        <img class = "ss" src = "./img/brave_screenshot.png" alt = "Portfolio screenshot">
                         <p>A portfolio site built for showcasing my front-end development skills and projects</p>
                         <div class = "project-links">
                         <a href = "https://github.com/Sam-2503/sam-2503.github.io"><img class = "project-link-icon" src = "./icons/github.png"></a>
