--- a/404.html
+++ b/404.html
@@ -5,12 +5,12 @@
 		<link rel="icon" href="/ghost.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.C_TalWgW.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BfjK1FeA.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.XG4FXkW5.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/C2KZgs__.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/kOybiQqv.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BhQ-HJB1.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/6giCx1FX.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CTKYzHhB.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.4GmX-3Ed.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CWj6FrbW.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/ChNqUuzV.js">
 		<title>Samprad's Portfolio</title>
@@ -19,15 +19,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_5i3twf = {
+					__sveltekit_nh7np3 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.C_TalWgW.js"),
-						import("/_app/immutable/entry/app.CTKYzHhB.js")
+						import("/_app/immutable/entry/start.XG4FXkW5.js"),
+						import("/_app/immutable/entry/app.4GmX-3Ed.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
