--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/0.DB1znGJj.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.C_TalWgW.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BfjK1FeA.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.XG4FXkW5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/C2KZgs__.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/kOybiQqv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BhQ-HJB1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/6giCx1FX.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CTKYzHhB.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.4GmX-3Ed.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CWj6FrbW.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/ChNqUuzV.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.4Eo4szOR.js">
@@ -30,15 +30,15 @@
 			
 			<script>
 				{
-					__sveltekit_5i3twf = {
+					__sveltekit_nh7np3 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.C_TalWgW.js"),
-						import("./_app/immutable/entry/app.CTKYzHhB.js")
+						import("./_app/immutable/entry/start.XG4FXkW5.js"),
+						import("./_app/immutable/entry/app.4GmX-3Ed.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
