--- a/404.html
+++ b/404.html
@@ -1,38 +1,38 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="/ghost.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.XG4FXkW5.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/C2KZgs__.js">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="/ghost.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Bm9bWunz.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CzSflGjw.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/kOybiQqv.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BhQ-HJB1.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/6giCx1FX.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.4GmX-3Ed.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.HKn7rW3d.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CWj6FrbW.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/ChNqUuzV.js">
-		<title>Samprad's Portfolio</title>
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">
+    <title>Samprad's Portfolio</title>
+  </head>
+  <body data-sveltekit-preload-data="hover">
+    <div style="display: contents">
 			<script>
 				{
-					__sveltekit_nh7np3 = {
+					__sveltekit_1i3yw5y = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.XG4FXkW5.js"),
-						import("/_app/immutable/entry/app.4GmX-3Ed.js")
+						import("/_app/immutable/entry/start.Bm9bWunz.js"),
+						import("/_app/immutable/entry/app.HKn7rW3d.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
 				}
 			</script>
 		</div>
-	</body>
+  </body>
 </html>
